# RaphEngine2

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TODO  compile.bat  compile.sh  make.sh  shaderUtils.py  text.json
cmake/: RaphEngine2Config.cmake.in
editor/: CMakeLists.txt  RaphEditor
editor/src/: main.cpp
include/: game_object.hpp  renderable.hpp  transform.hpp
include/RaphEngine2/: RaphEngine2.hpp  Serializable.hpp  core.hpp  default_shaders.hpp  export.hpp  game_object.hpp  mesh.hpp  renderable.hpp  serializable.hpp  time_utils.hpp  transform.hpp  utils.hpp
include/RaphEngine2/component/: camera_component.hpp  component.hpp  light_component.hpp  mesh_component.hpp
include/RaphEngine2/graphics/: graphic_api.hpp  mesh_buffers.hpp  mesh_renderer.hpp  renderer.hpp  resolution.hpp  shader.hpp  shaders_manager.hpp  shadow_renderer.hpp
include/RaphEngine2/graphics/ogl/: gl_mesh_buffers.hpp  gl_mesh_renderer.hpp  gl_shader.hpp  gl_shader.hxx  gl_shadow_renderer.hpp  opengl.hpp  shader.hpp
include/RaphEngine2/inputs/: keyboard.hpp  mouse.hpp
include/RaphEngine2/logger/: logger.hpp  logger.hxx
include/RaphEngine2/objects/: box.hpp  game_object.hpp  game_object.hxx  lod.hpp  mesh.hpp  mesh_info.hpp  mesh_loader.hpp  object_mesh.hpp  shader.hpp  transform.hpp
include/RaphEngine2/resources/: model_resource.hpp  resource.hpp  resources.hpp  resources_manager.hpp  resources_manager.hxx
include/RaphEngine2/settings/: ISettingsCategory.hpp  generic_settings.hpp  generic_settings.hxx  graphics.hpp  save_settings.hpp  settings.hpp  settings.hxx
shaders/: default_fs.glsl  default_vs.glsl
src/: CMakeLists.txt  RaphEngine2.cpp  core.cpp  default_shaders.cpp  game_object.cpp  main.cpp  raph_engine2.cpp  renderable.cpp  time_utils.cpp  utils.cpp
src/component/: camera_component.cpp  light_component.cpp  mesh_component.cpp
src/graphics/: graphic_api.cpp  mesh_buffers.cpp  mesh_renderer.cpp  shader.cpp  shadow_renderer.cpp
src/graphics/ogl/: gl_mesh_buffers.cpp  gl_mesh_renderer.cpp  gl_shader.cpp  gl_shadow_renderer.cpp  opengl.cpp  shader.cpp
src/inputs/: keyboard.cpp  mouse.cpp
src/logger/: logger.cpp
src/objects/: box.cpp  game_object.cpp  lod.cpp  mesh.cpp  mesh_loader.cpp  object_mesh.cpp  shader.cpp  transform.cpp
src/resources/: resources_manager.cpp
src/settings/: generic_settings.cpp  graphics.cpp  save_settings.cpp  settings.cpp
